--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,24 @@
 [project]
 name = "spei"
 version = "0.2.3"
-authors = [
-  { name="Martin Vonk" },
-]
+authors = [{ name = "Martin Vonk" }]
 description = "A simple Python package to calculate drought indices for time series such as the SPI, SPEI and SGI."
 readme = "README.md"
-license = { file="LICENSE" }
+license = { file = "LICENSE" }
 requires-python = ">=3.8"
-dependencies = [
-  "numpy", "scipy", "matplotlib", "pandas"
-]
+dependencies = ["numpy", "scipy", "matplotlib", "pandas"]
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
 ]
+
+[project.optional-dependencies]
+type = ["mypy", "pandas-stubs"]
+full = ["spei[type]", "black[jupyter]"]
+
+[tool.black]
+line-length = 88
+
+[tool.isort]
+profile = "black"
