--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,13 @@ legacy_tox_ini = """
     requires = tox>=4
     env_list = lint, type, py{38,39,310,311}
 
+    [gh-actions]
+    python =
+    3.8: py38
+    3.9: py39
+    3.10: py310, lint, flake8
+    3.11: py311
+
     [testenv]
     description = run unit tests
     extras = pytesting
