--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ license = { file = "LICENSE" }
 requires-python = ">=3.8"
 dependencies = ["numpy", "scipy", "matplotlib", "pandas"]
 classifiers = [
-  "Programming Language :: Python :: 3",
-  "License :: OSI Approved :: MIT License",
-  "Operating System :: OS Independent",
+        "Programming Language :: Python :: 3",
+        "License :: OSI Approved :: MIT License",
+        "Operating System :: OS Independent",
 ]
 
 [project.optional-dependencies]
@@ -45,7 +45,7 @@ legacy_tox_ini = """
     python =
     3.8: py38
     3.9: py39
-    3.10: py310, lint, flake8
+    3.10: py310, lint, type
     3.11: py311
 
     [testenv]
