--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,13 @@ license = { file = "LICENSE" }
 requires-python = ">=3.8"
 dependencies = ["numpy", "scipy", "matplotlib", "pandas"]
 classifiers = [
-        "Programming Language :: Python :: 3",
+        'Programming Language :: Python :: 3 :: Only',
+        'Programming Language :: Python :: 3.8',
+        'Programming Language :: Python :: 3.9',
+        'Programming Language :: Python :: 3.10',
+        'Programming Language :: Python :: 3.11',
+        'Topic :: Scientific/Engineering :: Hydrology',
+        'Intended Audience :: Science/Research',
         "License :: OSI Approved :: MIT License",
         "Operating System :: OS Independent",
 ]
