--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
+[build-system]
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
 [project]
 name = "spei"
-version = "0.2.4"
-authors = [{ name = "Martin Vonk" }]
+version = "0.3.0"
+authors = [{ name = "Martin Vonk", email = "vonk.mart@gmail.com" }]
 description = "A simple Python package to calculate drought indices for time series such as the SPI, SPEI and SGI."
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -18,6 +22,9 @@ classifiers = [
         "License :: OSI Approved :: MIT License",
         "Operating System :: OS Independent",
 ]
+
+[project.urls]
+Home = "https://github.com/martinvonk/spei"
 
 [project.optional-dependencies]
 linting = ["black[jupyter]", "isort"]
