--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,10 +28,11 @@ homepage = "https://github.com/martinvonk/spei"
 repository = "https://github.com/martinvonk/spei"
 
 [project.optional-dependencies]
-linting = ["black[jupyter]", "isort"]
+linting = ["flake8"]
+formatting = ["black[jupyter]", "isort"]
 typing = ["mypy", "pandas-stubs"]
 pytesting = ["pytest>=7", "pytest-cov", "pytest-sugar"]
-dev = ["spei[linting,typing,pytesting]"]
+dev = ["spei[linting,formatting,typing,pytesting]"]
 
 [tool.black]
 line-length = 88
@@ -53,12 +54,12 @@ pythonpath = ["src"]
 legacy_tox_ini = """
     [tox]
     requires = tox>=4
-    env_list = lint, type, py{38,39,310,311}
+    env_list = format, type, lint, py{38,39,310,311}
 
     [gh-actions]
     python =
         3.8: py38
-        3.9: py39, lint, type
+        3.9: py39, format, type, lint
         3.10: py310
         3.11: py311
 
@@ -68,11 +69,10 @@ legacy_tox_ini = """
     commands =
             pytest {posargs:tests}
 
-    [testenv:lint]
-    description = run linters
+    [testenv:format]
+    description = run formatters
     basepython = python3.9
-    extras = linting
-    commands =
+    extras = formatting
             black {posargs:src}
             isort {posargs:src}
 
@@ -82,4 +82,11 @@ legacy_tox_ini = """
     extras = typing
     commands =
             mypy {posargs:src}
+
+    [testenv:lint]
+    description = run linters
+    basepython = python3.9
+    extras = linting
+    commands =
+            flake8 {posargs:src --max-line-length=88}
 """
