--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,18 @@ jobs:
           toxenv: lint
 
     name: ${{ matrix.name }}
+    env:
+      # Color Output
+      # Rich (pip)
+      FORCE_COLOR: 1
+      # Tox
+      PY_COLORS: 1
+      # MyPy
+      TERM: xterm-color
+      MYPY_FORCE_COLOR: 1
+      MYPY_FORCE_TERMINAL_WIDTH: 200
+      # Pytest
+      PYTEST_ADDOPTS: --color=yes
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python }}
@@ -51,8 +63,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox tox-gh-actions
-    - name: Test with tox
-      run: tox
-      env:
-        PLATFORM: ${{ matrix.platform }}
+        pip install tox
+    - name: Setup tox environment
+      run: tox -e ${{ matrix.toxenv }} --notest
+    - name: Test
+      run: tox -e ${{ matrix.toxenv }} --skip-pkg-install
