--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=64"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "spei"
-version = "0.3.0"
+dynamic = ["version"]
 authors = [{ name = "Martin Vonk", email = "vonk.mart@gmail.com" }]
 description = "A simple Python package to calculate drought indices for time series such as the SPI, SPEI and SGI."
 readme = "README.md"
@@ -33,6 +33,9 @@ formatting = ["black[jupyter]", "isort"]
 typing = ["mypy", "pandas-stubs"]
 pytesting = ["pytest>=7", "pytest-cov", "pytest-sugar"]
 dev = ["spei[linting,formatting,typing,pytesting]"]
+
+[tool.setuptools.dynamic]
+version = { attr = "spei._version.__version__" }
 
 [tool.black]
 line-length = 88
