--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
       MYPY_FORCE_COLOR: 1
       MYPY_FORCE_TERMINAL_WIDTH: 200
       # Pytest
-      PYTEST_ADDOPTS: --color=yes
+      PYTEST_ADDOPTS: "--color=yes"
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python }}
