--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,16 +55,49 @@ jobs:
       PYTEST_ADDOPTS: "--color=yes"
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
           check-latest: true
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install tox
+
       - name: Setup tox environment
         run: tox -e ${{ matrix.toxenv }} --notest
+
       - name: Test
         run: tox -e ${{ matrix.toxenv }} --skip-pkg-install
+
+      - name: Store coverage
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage
+          path: coverage.xml
+          if-no-files-found: ignore
+
+  coverage:
+    name: Coverage
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Set up Python ${{ matrix.python }}
+        uses: actions/setup-python@v4
+        with:
+          check-latest: true
+
+      - name: Get coverage
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage
+
+      - name: Run codacy-coverage-reporter
+        if: ${{ github.repository == 'martinvonk/SPEI' && success() }}
+        uses: codacy/codacy-coverage-reporter-action@master
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: coverage.xml
