Revert "Update tests.yml"
This reverts commit 48f58ee6770eb4314a41f240433307722e34f96a.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -97,7 +97,7 @@ jobs:
 
       - name: Run codacy-coverage-reporter
         if: ${{ github.repository == 'martinvonk/SPEI' && success() }}
-        uses: codacy/codacy-coverage-reporter-action@main
+        uses: codacy/codacy-coverage-reporter-action@master
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: coverage.xml
