--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,10 @@ jobs:
             python: "3.9"
             os: ubuntu-latest
             toxenv: lint
+          - name: Codacy Coverage Report
+            python: "3.9"
+            os: ubuntu-latest
+            toxenv: coverage
 
     name: ${{ matrix.name }}
     env:
@@ -73,30 +77,8 @@ jobs:
       - name: Test
         run: tox -e ${{ matrix.toxenv }} --skip-pkg-install
 
-      - name: Store coverage
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage
-          path: coverage.xml
-          if-no-files-found: ignore
-
-  coverage:
-    name: Coverage
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v4
-        with:
-          check-latest: true
-
-      - name: Get coverage
-        uses: actions/download-artifact@v3
-        with:
-          name: coverage
-
       - name: Run codacy-coverage-reporter
-        if: ${{ github.repository == 'martinvonk/SPEI' && success() }}
+        if: ${{ matrix.toxenv == 'coverage' && github.repository == 'martinvonk/spei' && success() }}
         uses: codacy/codacy-coverage-reporter-action@master
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
