add ruff as linter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ homepage = "https://github.com/martinvonk/spei"
 repository = "https://github.com/martinvonk/spei"
 
 [project.optional-dependencies]
-linting = ["flake8"]
+linting = ["flake8", "ruff"]
 formatting = ["black[jupyter]", "isort"]
 typing = ["mypy", "pandas-stubs"]
 pytesting = ["pytest>=7", "pytest-cov", "pytest-sugar"]
@@ -53,6 +53,9 @@ ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
+
+[tool.ruff]
+line-length = 88
 
 [tool.tox]
 legacy_tox_ini = """
@@ -87,6 +90,7 @@ legacy_tox_ini = """
     extras = linting
     commands =
             flake8 src --max-line-length=88
+            ruff check src
 
     [testenv:coverage]
     description = get coverage report xml
