--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,7 @@ legacy_tox_ini = """
     basepython = python3.9
     extras = linting
     commands =
-            flake8 src --max-line-length=88
+            flake8 src --max-line-length=88 --ignore=E203,W503,W504
             ruff check src
 
     [testenv:coverage]
