--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ description = "A simple Python package to calculate drought indices for time ser
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.9"
-dependencies = ["numpy", "scipy", "matplotlib", "pandas>=2.1.0"]
+dependencies = ["numpy", "scipy", "matplotlib", "pandas"]
 classifiers = [
         'Programming Language :: Python :: 3 :: Only',
         'Programming Language :: Python :: 3.9',
