--- a/.github/workflows/draft-pdf.yml
+++ b/.github/workflows/draft-pdf.yml
@@ -1,11 +1,11 @@
 # https://github.com/marketplace/actions/open-journals-pdf-generator
-name: Draft PDF
+name: JOSS
 on: [push]
 
 jobs:
   paper:
     runs-on: ubuntu-latest
-    name: Paper Draft
+    name: Build Paper Draft
     steps:
       - name: Checkout
         uses: actions/checkout@v4
